# podman-axum-example

./: .gitignore  LICENSE  Makefile  README.md  tasks.py
infra/compose/services/web-example/: docker-compose-dev.yml  docker-compose-tst.yml  docker-compose.yml
infra/compose/services/web-example/envs/: envfile.tst
infra/images/: Dockerfile.rust-axum-dev  Dockerfile.rust-axum-prd
source/: Cargo.toml
source/crates/libs/lib-utils/: Cargo.toml
source/crates/libs/lib-utils/src/: b64.rs  envs.rs  lib.rs
